Fixing dark mode for "Related posts"

--- a/_assets/css/savjee.scss
+++ b/_assets/css/savjee.scss
@@ -213,4 +213,8 @@ footer {
             color: $linkColor;
         }
     }
+
+    .related-posts{
+        background-color: $headerBackgroundDarkMode;
+    }
 }
